--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2544,11 +2544,11 @@ input, select, textarea {
 				}
 
 				.wrapper.style2 .icon.major:before {
-					color: #5052b5;
+					color: #04CF5D;
 				}
 
 				.wrapper.style2-alt .icon.major:before {
-					color: #3e4094;
+					color: #003015;
 				}
 
 				.wrapper.style3 .icon.major:before {
@@ -3524,7 +3524,7 @@ input, select, textarea {
 
 	#sidebar {
 		padding: 2.5em 2.5em 0.5em 2.5em ;
-		background: #FFBC19;
+		background: #0000;
 		cursor: default;
 		height: 100vh;
 		left: 0;
