--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2540,7 +2540,7 @@ input, select, textarea {
 				}
 
 				.wrapper.style1-alt .icon.major:before {
-					color: #493382;
+					color: #003015;
 				}
 
 				.wrapper.style2 .icon.major:before {
@@ -2556,7 +2556,7 @@ input, select, textarea {
 				}
 
 				.wrapper.style3-alt .icon.major:before {
-					color: #953d75;
+					color: #04CF5D;
 				}
 
 /* Image */
