--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3236,7 +3236,7 @@ input, select, textarea {
 			}
 
 		.wrapper.alt {
-			background-color: #261c3e;
+			background-color: #003015;
 		}
 
 		.wrapper.style1 {
@@ -3248,11 +3248,11 @@ input, select, textarea {
 		}
 
 		.wrapper.style2 {
-			background-color: #5052b5;
+			background-color: #04CF5D;
 		}
 
 		.wrapper.style2-alt {
-			background-color: #3e4094;
+			background-color: #FFBC19;
 		}
 
 		.wrapper.style3 {
@@ -3260,7 +3260,7 @@ input, select, textarea {
 		}
 
 		.wrapper.style3-alt {
-			background-color: #953d75;
+			background-color: #FFBC19;
 		}
 
 		.wrapper.fullscreen {
