--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3882,6 +3882,7 @@ input, select, textarea {
 
 		#intro p {
 			font-size: 1.25em;
+			text-color: #A9ADAB;
 		}
 
 			@media screen and (max-width: 980px) {
